2017-08-16  Marek Polacek  <polacek@redhat.com>

	PR middle/81695
	* fold-const.c (fold_indirect_ref_1): Restore original behavior
	regarding size_zero_node.

2017-08-16  Martin Liska  <mliska@suse.cz>

	PR target/81753
	* config.gcc: Respect previously set extra_objs in case
	of darwin target.

2017-08-16  Richard Sandiford  <richard.sandiford@linaro.org>

	PR tree-optimization/81835
	* tree-vect-loop.c (vect_is_simple_reduction): Simply checks for
	the phi SSA_NAME.  Check that the condition in a COND_EXPR does
	not depend on the phi.

2017-08-16  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.c (rs6000_init_hard_regno_mode_ok): Delete
	dead code.

2017-08-16  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.c (rs6000_reg_live_or_pic_offset_p): Merge..
	(save_reg_p): ..into this.  Update all callers.
	(first_reg_to_save): Simplify.

2017-08-16  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.c (rs6000_savres_strategy): Don't restore
	fixed regs.

2017-08-15  Joseph Myers  <joseph@codesourcery.com>

	PR target/78460
	PR target/67712
	* config/sh/sh-mem.cc (sh_expand_cmpnstr): Only unroll for
	constant count if that count is less than 32.

2017-08-15  Nathan Sidwell  <nathan@acm.org>

	* gcc.c (execute): Emit friendlier message if inferior is killed
	by an external cause.

2017-08-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81790
	* tree-ssa-sccvn.c (vn_lookup_simplify_result): Handle both
	CONSTRUCTORs from simplifying and VN.

2017-08-14  Martin Sebor  <msebor@redhat.com>

	* builtin-attrs.def: Add comments.

2017-08-14  Martin Sebor  <msebor@redhat.com>

	PR c/81117
	* doc/extend.texi (attribute nonstring): Document new attribute.

2017-08-14  Martin Sebor  <msebor@redhat.com>

	PR c/81117
	* tree-diagnostic.c (default_tree_printer): Handle %G.
	* gimple-pretty-print.h (percent_G_format): Declare new function.
	* gimple-pretty-print.c (percent_G_format): Define.
	* tree-pretty-print.c (percent_K_format): Add argument.
