@@ -1,3 +1,8 @@
+2017-08-16  Bin Cheng  <bin.cheng@arm.com>
+
+	PR tree-optimization/81832
+	* gcc.dg/tree-ssa/pr81832.c: New test.
+
 2017-08-16  Richard Sandiford  <richard.sandiford@linaro.org>
 
 	PR tree-optimization/81835
